tests/baselines/reference/unusedTypeParametersWithUnderscore.errors.txt
tests/cases/compiler/unusedTypeParametersWithUnderscore.ts(1,16): error TS6133: 'U' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersWithUnderscore.ts(3,12): error TS6133: 'U' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersWithUnderscore.ts(5,17): error TS6133: 'U' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersWithUnderscore.ts(7,13): error TS6133: 'U' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParametersWithUnderscore.ts (4 errors) ====
    function f<_T, U>() { }
                   ~
!!! error TS6133: 'U' is declared but its value is never read.
    
    type T<_T, U> = { };
               ~
!!! error TS6133: 'U' is declared but its value is never read.
    
    interface I<_T, U> { };
                    ~
!!! error TS6133: 'U' is declared but its value is never read.
    
    class C<_T, U> { };
                ~
!!! error TS6133: 'U' is declared but its value is never read.
    